--- a/index.html
+++ b/index.html
@@ -1,16 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <style type="text/css">
-        h1{
-            text-align: center;
-            font-size: 50px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>我的小站</title>
+  <!-- 引用CSS，使用CDN加速访问 -->
+  <!-- <link rel="stylesheet" href="css/materialize.min.css"> -->
+  <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.1/css/materialize.min.css" rel="stylesheet">
+  <style>
+  </style>
 </head>
 <body>
-    <h1>Hello Github</h1>   
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">放置Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <!-- 空的链接 -->
+        <li><a href="#">首页</a></li>
+        <li><a href="#">博客</a></li>
+        <li><a href="#">关于我</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="content">
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">卡片标题</span>
+            <p>我是一个很简单的卡片。我很擅长于包含少量的信息。我很方便，因为我只需要一个小标记就可以有效地使用。</p>
+          </div>
+          <div class="card-action">
+            <a href="#">这是一个链接</a>
+            <a href="#">这是一个链接</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m7">
+        <div class="card">
+          <div class="card-image">
+            <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1534224928436&di=89e448fd55f6bcdd72d77994fa318bcb&imgtype=0&src=http%3A%2F%2Fs8.sinaimg.cn%2Fmiddle%2F8ee3e0acxb0171b491f27%26690">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>我是一个很简单的卡片。我很擅长于包含少量的信息。我很方便，因为我只需要一个小标记就可以有效地使用。</p>
+          </div>
+          <div class="card-action">
+            <a href="#">这是一个链接</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1534224928435&di=8bd66382afde6b3a9391826c09c02ded&imgtype=0&src=http%3A%2F%2Fpic.feizl.com%2Fupload%2Fallimg%2F180126%2F291186uuwuygmswlt.png">
+            <span class="card-title">卡片标题</span>
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          </div>
+          <div class="card-content">
+            <p>我是一个很简单的卡片。我很擅长于包含少量的信息。我很方便，因为我只需要一个小标记就可以有效地使用。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">页脚内容</h5>
+            <p class="grey-text text-lighten-4">你可以用行和列来组织你的页脚内容。</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">链接</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">链接 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">链接 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">链接 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">链接 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright 文本
+        <a class="grey-text text-lighten-4 right" href="#!">更多链接</a>
+        </div>
+      </div>
+    </footer>
+
+  <!-- 挂个JQ的CDN -->
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <!-- 引用JS，使用CDN加速访问 -->
+  <!-- <script src="js/materialize.min.js"></script> -->
+  <script src="https://cdn.bootcss.com/materialize/1.0.0-rc.1/js/materialize.min.js"></script>
 </body>
 </html>
