--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
 	<div class="W-head-portrait">
 		<a href="http://www.2019w.cn" target="_blank">
-			<img src="img/Headportrait2.jpg" alt="王立战的博客" />
-			<div class="My-resume"><span>Rieko</span><i>'s</i> resume</div>
+			<img src="img/Headportrait2.jpg" alt="邓迪豪的博客" />
+			<div class="My-resume"><span>Dabriai</span><i>'s</i> resume</div>
 			<div class="clear"></div>
 		</a>
 	</div>
@@ -59,12 +59,12 @@
 	</div>
 	<div class="W-logo">
 		<img src="img/wang.png" />
-		<span class="W-rem">王立</span>
+		<span class="W-rem">邓迪豪</span>
 		<div class="W-logo-jian">
-			<span class="W-boke">· Rieko's resume</span>
-			<span class="W-qq">QQ:939820199</span>
+			<span class="W-boke">· 人情冷暖i </span>
+			<span class="W-qq">QQ:874611736</span>
 		</div>
-		<span class="W-zhan">战</span>
+		<span class="W-zhan">豪</span>
 		<div class="clear"></div>
 	</div>
 	<div class="nav-zhe"></div>
@@ -80,11 +80,11 @@
 								<div class="block">
 									<span class="circleLight"></span>
 									<div class="text">
-										<h2>Hello, I'm Rieko</h2>
+										<h2>Hello, I'm Dabriai</h2>
 										<strong>Life doesn’t get easier, you just get stronger</strong>
-										<p class="W-p1">我叫王立战</p>
+										<p class="W-p1">我叫邓迪豪</p>
 										<p class="W-p2">一名前端开发工程师</p>
-										<p class="W-mailbox">SHOW_wlz@163.com</p>
+										<p class="W-mailbox">dengdihao_888@163.com</p>
 									</div>
 								</div>
 							</div>
@@ -147,7 +147,7 @@
 								<li class="jq">JavaScript</li>
 								<li class="css">CSS3</li>
 								<li class="html">HTML5</li>
-								<li class="php">Thinkphp</li>
+								<li class="php">Java</li>
 								<li class="sql">jQuery</li>
 							</ul>
 						</div>
@@ -172,7 +172,7 @@
 						<input type="hidden " class="color" value="#d3d671" />
 					</div>
 					<div class="arc">
-						<span class="text">Thinkphp</span>
+						<span class="text">Java</span>
 						<input type="hidden" class="percent" value="30" />
 						<input type="hidden" class="color" value="#BEDBE9" />
 					</div>
@@ -741,12 +741,12 @@
 		<a href="http://vip.2019w.cn" title="小王vip视频解析"></a>
 	</div>
 
+	<script src='js/howler.min.js'></script>
 	<script src='js/swiper-3.4.1.min.js'></script>
 	<script src='js/wowslider.js'></script>
 	<script src='js/script.js'></script>
 	<script src="js/raphael.js"></script>
 	<script src='js/init.js'></script>
-	<script src='js/howler.min.js'></script>
 	<script src='js/index.js'></script>
 </body>
 
