--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<div class="W-head-portrait">
-		<a href="http://www.2019w.cn" target="_blank">
+		<a href="http://https://www.csdn.net/" target="_blank">
 			<img src="img/Headportrait2.jpg" alt="邓迪豪的博客" />
 			<div class="My-resume"><span>Dabriai</span><i>'s</i> resume</div>
 			<div class="clear"></div>
@@ -54,12 +54,12 @@
 			<li><a href="javascript:;">我的经历<span></span></a></li>
 			<li><a href="javascript:;">我的作品<span></span></a></li>
 			<li><a href="javascript:;">联系我<span></span></a></li>
-			<li><a href="https://showcc.github.io" target="_blank">我的博客<span></span></a></li>
+			<li><a href="http://www.cnblogs.com/studysuper/" target="_blank">我的博客<span></span></a></li>
 		</ul>
 	</div>
 	<div class="W-logo">
 		<img src="img/wang.png" />
-		<span class="W-rem">邓迪豪</span>
+		<span class="W-rem">邓迪</span>
 		<div class="W-logo-jian">
 			<span class="W-boke">· 人情冷暖i </span>
 			<span class="W-qq">QQ:874611736</span>
@@ -81,7 +81,7 @@
 									<span class="circleLight"></span>
 									<div class="text">
 										<h2>Hello, I'm Dabriai</h2>
-										<strong>Life doesn’t get easier, you just get stronger</strong>
+										<strong>Action speak louder than words.</strong>
 										<p class="W-p1">我叫邓迪豪</p>
 										<p class="W-p2">一名前端开发工程师</p>
 										<p class="W-mailbox">dengdihao_888@163.com</p>
@@ -262,7 +262,7 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="W-mywork-left">
-								<a href="http://www.show08.com" target="_blank">
+								<a href="http://www.dengdihao.club" target="_blank">
 									<div class="W-work13"><span>我的简历网站(本网站)</span></div>
 								</a>
 							</div>
@@ -386,13 +386,13 @@
 								期待有机会与您共事！
 							</p>
 							<div class="W-lian-bottom">
-								<a href="https://github.com/showcc" target="_blank">
+								<a href="https://https://github.com/dengdihao" target="_blank">
 									<img src="img/github.png" alt="">
 									<span class="W-Github">Github</span>
 								</a>
 								<a href="javascript:;">
 									<img src="img/mail.png" alt="">
-									<span class="W-Mail">SHOW_wlz@163.com</span>
+									<span class="W-Mail">dengdihao_888@163.com</span>
 								</a>
 								<a href="javascript:;">
 									<img src="img/qq.png" alt="">
@@ -401,14 +401,6 @@
 								<a href="javascript:;">
 									<img src="img/wechat.png" alt="">
 									<span class="W-weixin"></span>
-								</a>
-								<a href="http://weibo.com/u/3941909649" target="_blank">
-									<img src="img/weibo.png" alt="">
-									<span class="W-weibo">Weibo</span>
-								</a>
-								<a href="https://www.zhihu.com/people/showccc/activities" target="_blank">
-									<img src="img/zhihu.png" alt="">
-									<span class="W-zhihu">Zhihu</span>
 								</a>
 								<div class="clear"></div>
 							</div>
@@ -452,18 +444,18 @@
 				<img src="img/me1.jpg" />
 			</a>
 			<h2>Hello, I'm Rieko</h2>
-			<strong>Life doesn’t get easier, you just get stronger</strong>
-			<p class="W-p1">我叫王立战</p>
+			<strong>Action speak louder than words.</strong>
+			<p class="W-p1">我叫邓迪豪</p>
 			<p class="W-p2">一名前端开发工程师</p>
-			<p class="W-mailbox">SHOW_wlz@163.com</p>
+			<p class="W-mailbox">dengdihao_888@163.com</p>
 			<div class="W-lian-bottom">
-				<a href="https://github.com/showcc" target="_blank">
+				<a href="https://github.com/dengdihao" target="_blank">
 					<img src="img/github.png" alt="">
 					<span class="W-Github">Github</span>
 				</a>
 				<a href="javascript:;">
 					<img src="img/mail.png" alt="">
-					<span class="W-Mail">SHOW_wlz@163.com</span>
+					<span class="W-Mail">dengdihao_888@163.com</span>
 				</a>
 				<a href="javascript:;">
 					<img src="img/qq.png" alt="">
@@ -472,14 +464,6 @@
 				<a href="javascript:;">
 					<img src="img/wechat.png" alt="">
 					<span class="W-weixin"></span>
-				</a>
-				<a href="http://weibo.com/u/3941909649" target="_blank">
-					<img src="img/weibo.png" alt="">
-					<span class="W-weibo">Weibo</span>
-				</a>
-				<a href="https://www.zhihu.com/people/showccc/activities" target="_blank">
-					<img src="img/zhihu.png" alt="">
-					<span class="W-zhihu">Zhihu</span>
 				</a>
 				<div class="clear"></div>
 			</div>
@@ -675,13 +659,13 @@
 			</div>
 		</div>
 		<div class="W-lian-bottom">
-			<a href="https://github.com/showcc" target="_blank">
+			<a href="https://github.com/dengdihao" target="_blank">
 				<img src="img/github.png" alt="">
 				<span class="W-Github">Github</span>
 			</a>
 			<a href="javascript:;">
 				<img src="img/mail.png" alt="">
-				<span class="W-Mail">SHOW_wlz@163.com</span>
+				<span class="W-Mail">dengdihao_888@163.com</span>
 			</a>
 			<a href="javascript:;">
 				<img src="img/qq.png" alt="">
@@ -690,14 +674,6 @@
 			<a href="javascript:;">
 				<img src="img/wechat.png" alt="">
 				<span class="W-weixin"></span>
-			</a>
-			<a href="http://weibo.com/u/3941909649" target="_blank">
-				<img src="img/weibo.png" alt="">
-				<span class="W-weibo">Weibo</span>
-			</a>
-			<a href="https://www.zhihu.com/people/showccc/activities" target="_blank">
-				<img src="img/zhihu.png" alt="">
-				<span class="W-zhihu">Zhihu</span>
 			</a>
 			<div class="clear"></div>
 		</div>
@@ -720,7 +696,7 @@
 				conf: '91f9efb5bffadfdd35e0ded3d848081e'
 			});
 		</script>
-		<style type="text/css">
+		<!-- <style type="text/css">
 			#SOHUCS #SOHU_MAIN .module-cmt-footer .section-service-w,
 			#SOHUCS #SOHU_MAIN .module-cmt-footer .section-service-w .service-wrap-w,
 			#SOHUCS #SOHU_MAIN .module-cmt-footer .section-service-w .service-wrap-w a {
@@ -730,15 +706,8 @@
 			#SOHUCS #SOHU_MAIN .module-hot-topic {
 				display: none !important;
 			}
-		</style>
-		<div class="Ws-bei">
-			© Rieko | 苏ICP备17044739号
-		</div>
-	</div>
-	<div style="display: none;">
-		<a href="http://www.2019w.cn" title="2019网"></a>
-		<a href="http://2019w.cn" title="2019网"></a>
-		<a href="http://vip.2019w.cn" title="小王vip视频解析"></a>
+		</style> -->
+
 	</div>
 
 	<script src='js/howler.min.js'></script>
