--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta name="description" content="王立战web前端个人简历，前端学习，前端开发，前端工程师简历">
-	<meta name="keywords" content="web前端，Rieko，web前端个人简历，前端开发简历网站，王立战的简历，前端工程师简历">
-	<meta name="author" content="Rieko">
+	<meta name="description" content="邓迪豪web前端个人简历，前端学习，前端开发，前端工程师简历">
+	<meta name="keywords" content="web前端，Dabriai，web前端个人简历，前端开发简历网站，邓迪豪的简历，前端工程师简历">
+	<meta name="author" content="Dabriai">
 	<meta name="fragment" content="!">
 	<meta name="baidu-site-verification" content="UMMVJZAage" />
 	<title>Web前端工程师简历</title>
@@ -96,22 +96,22 @@
 						<ul>
 							<li>
 								<a href="javascript:;">
-									<img src="img/lun1.jpg " alt="王立战的前端简历" title="" />
+									<img src="img/lun1.jpg " alt="邓迪豪的前端简历" title="" />
 								</a>
 							</li>
 							<li>
 								<a href="javascript:;">
-									<img src="img/lun4.png " alt="王立战的前端简历" title="" />
+									<img src="img/lun4.png " alt="邓迪豪的前端简历" title="" />
 								</a>
 							</li>
 							<li>
 								<a href="javascript:;">
-									<img src="img/lun2.jpg " alt="王立战的前端简历" title="" />
+									<img src="img/lun2.jpg " alt="邓迪豪的前端简历" title="" />
 								</a>
 							</li>
 							<li>
 								<a href="javascript:;">
-									<img src="img/lun3.jpg " alt="王立战的前端简历" title="" />
+									<img src="img/lun3.jpg " alt="邓迪豪的前端简历" title="" />
 								</a>
 							</li>
 						</ul>
@@ -125,11 +125,11 @@
 					<div class="W-introduce-me">
 						<img src="img/me1.jpg" alt="头像" />
 					</div>
-					<p>
-						您好，我叫王立战，22岁，坐标南京。
-						我并不是计算机专业,但对前端很感兴趣，所以自学前端，今后的职业规划是朝着全栈发展，目前在学Thinkphp、AnjularJs。
-						在实习的五个月来,本人在公司主要负责整个页面的前端开发，配合后台人员实现产品前端界面效果与功能。写过响应式页面，移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。 在此很感谢<a href="http://www.yeebok.com"
-						 title="" target="_blank" class="yibaijia">苏州亿柏嘉软件有限公司</a> 对我的培养，让我学到了很多东西。
+					<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术毕业，对前端很感兴趣，对它有一定的研究。
+						今后的职业规划是朝着技术专家(架构师)发展，目前深入研究vue、webpack。写过写过响应式页面，
+						移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。在此很感谢
+						<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>
+						对我的培养，让我学到了很多东西。
 					</p>
 					<p>
 						不浮躁，喜欢前端，执行力，学习能力都棒棒哒！目前，能做点粗糙设计（比如本网站）。
@@ -147,7 +147,7 @@
 								<li class="jq">JavaScript</li>
 								<li class="css">CSS3</li>
 								<li class="html">HTML5</li>
-								<li class="php">Java</li>
+								<li class="java">Java</li>
 								<li class="sql">jQuery</li>
 							</ul>
 						</div>
@@ -236,10 +236,10 @@
 								</p>
 							</li>
 							<li class="W-time-top">
-								<p class="W-jie1">毕业于<strong>沙洲职业工学院</strong></p>
+								<p class="W-jie1">毕业于<strong>中南财经政法大学</strong></p>
 								<p class="W-jie2">
 									<span>&lt;大专&gt;</span>
-									获得大学英语三级证书 获得计算机一级
+									<!-- 获得大学英语三级证书 获得计算机一级 -->
 								</p>
 							</li>
 							<li class="W-time-top">
@@ -273,7 +273,7 @@
 							</div>
 							<div class="clear"></div>
 						</div>
-						<div class="swiper-slide">
+						<!-- <div class="swiper-slide">
 							<div class="W-mywork-left">
 								<a href="http://www.wnclub.cn/" target="_blank">
 									<div class="W-work1"><span>唯恩优享荟官网</span></div>
@@ -350,9 +350,7 @@
 								</a>
 							</div>
 							<div class="clear"></div>
-
-
-						</div>
+						</div> -->
 					</div>
 					<!-- 如果需要分页器 -->
 					<div class="swiper-pagination swiper-pagination2"></div>
@@ -419,7 +417,7 @@
 
 	<!--关闭音乐-->
 	<div class="Ws-header">
-		<span>Rieko's resume</span>
+		<span>Dabriai's resume</span>
 	</div>
 	<div class="W-yyue W-s-yyue">
 		<img src="img/nn.jpg" />
@@ -443,7 +441,7 @@
 			<a href="http://www.show08.com" class="Ws-tou" alt="头像">
 				<img src="img/me1.jpg" />
 			</a>
-			<h2>Hello, I'm Rieko</h2>
+			<h2>Hello, I'm Dabriai</h2>
 			<strong>Action speak louder than words.</strong>
 			<p class="W-p1">我叫邓迪豪</p>
 			<p class="W-p2">一名前端开发工程师</p>
@@ -473,16 +471,11 @@
 				<h3>关于我</h3>
 				<i></i>
 			</div>
-			<p>
-				您好，我叫王立战，22岁，坐标南京。
-				我并不是计算机专业,但对前端很感兴趣，所以自学前端，
-				今后的职业规划是朝着全栈发展，目前在学Thinkphp、AnjularJs,vue。
-				在实习的五个月来,本人在公司主要负责整个页面的前端开发，
-				配合后台人员实现产品前端界面效果与功能。写过响应式页面，
-				移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，
-				地图等都有涉及。
-				在此很感谢<a href="http://www.yeebok.com" target="_blank" class="yibaijia">苏州亿柏嘉软件有限公司</a>对我的培养，让我学到了很多东西。目前就职于<a href="http://www.1paiclub.com/"
-				 target="_blank" class="yibaijia">上海军果信息技术有限公司</a>。
+			<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术毕业，对前端很感兴趣，对它有一定的研究。
+				今后的职业规划是朝着技术专家(架构师)发展，目前深入研究vue、webpack。写过写过响应式页面，
+				移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。在此很感谢
+				<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>
+				对我的培养，让我学到了很多东西。
 			</p>
 			<p>
 				不浮躁，喜欢前端，执行力，学习能力都棒棒哒！目前，能做点粗糙设计（比如本网站）。
@@ -583,7 +576,7 @@
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
-							<strong>毕业沙洲职业工学院</strong>
+							<strong>毕业中南财经政法大学</strong>
 							<em>大专</em>
 							<p>
 								获得大学英语三级证书 获得计算机一级。
@@ -622,7 +615,7 @@
 					<div class="swiper-slide swiper-slide2">
 						<a href="https://showcc.github.io" target="_blank">我的博客</a>
 					</div>
-					<div class="swiper-slide swiper-slide3">
+					<!-- <div class="swiper-slide swiper-slide3">
 						<a href="http://www.wnclub.cn/" target="_blank">唯恩优享荟官网</a>
 					</div>
 					<div class="swiper-slide swiper-slide4">
@@ -645,7 +638,7 @@
 					</div>
 					<div class="swiper-slide swiper-slide10">
 						<a href="https://showcc.github.io/gai1/buji/index.html" target="_blank">不急蛋糕</a>
-					</div>
+					</div> -->
 				</div>
 				<!-- 如果需要分页器 -->
 				<div class="swiper-pagination swiper-pagination3"></div>
@@ -710,13 +703,13 @@
 
 	</div>
 
-	<script src='js/howler.min.js'></script>
-	<script src='js/swiper-3.4.1.min.js'></script>
-	<script src='js/wowslider.js'></script>
-	<script src='js/script.js'></script>
-	<script src="js/raphael.js"></script>
-	<script src='js/init.js'></script>
-	<script src='js/index.js'></script>
+	<script src='./js/howler.min.js'></script>
+	<script src='./js/swiper-3.4.1.min.js'></script>
+	<script src='./js/wowslider.js'></script>
+	<script src='./js/script.js'></script>
+	<script src="./js/raphael.js"></script>
+	<script src='./js/init.js'></script>
+	<script src='./js/index.js'></script>
 </body>
 
 </html>
