--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<li class="jq">JavaScript</li>
 								<li class="css">CSS3</li>
 								<li class="html">HTML5</li>
-								<li class="java">Java</li>
+								<li class="php">Java</li>
 								<li class="sql">jQuery</li>
 							</ul>
 						</div>
