--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<ul class="W-tim-ul">
 							<li class="W-li-top W-li-top-diyi">
 								<em>2017</em>
-								<i>02月</i>
+								<i>03月</i>
 								<b></b>
 								<div class="clear"></div>
 								<span></span>
@@ -226,15 +226,6 @@
 					</div>
 					<div class="W-work-right">
 						<ul>
-							<li>
-								<p class="W-jie1">在<strong>苏州亿柏嘉软件有限公司</strong>实习</strong></p>
-								<p class="W-jie2">
-									<span>&lt;技术部/前端H5工程师&gt;</span>
-									负责PC端移动端页面制作。PSD切图后构建页面框架
-									利用HTML、JS、CSS3书写前端功能，让页面更充实丰富。
-									2017年07月初从该公司离职。
-								</p>
-							</li>
 							<li class="W-time-top">
 								<p class="W-jie1">毕业于<strong>中南财经政法大学</strong></p>
 								<p class="W-jie2">
@@ -242,8 +233,18 @@
 									<!-- 获得大学英语三级证书 获得计算机一级 -->
 								</p>
 							</li>
+							<li>
+								<p class="W-jie1">在<strong>广州华夏天网智能科技有限公司</strong>实习</strong></p>
+								<p class="W-jie2">
+									<span>&lt;技术部/前端H5工程师&gt;</span>
+									负责PC端移动端页面制作。PSD切图后构建页面框架
+									利用HTML、JS、CSS3书写前端功能，让页面更充实丰富。
+									2017年07月初从该公司离职。
+								</p>
+							</li>
+
 							<li class="W-time-top">
-								<p class="W-jie1">就职于<strong>上海军果信息技术有限公司</strong></p>
+								<p class="W-jie1">就职于<strong>上海索向有限公司</strong></p>
 								<p class="W-jie2">
 									<span>&lt;技术部/前端H5工程师&gt;</span>
 									本人在该公司主要负责基于微信平台的H5轻应用开发，
