--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					<div class="W-work-right">
 						<ul>
 							<li class="W-time-top">
-								<p class="W-jie1">毕业于<strong>中南财经政法大学</strong></p>
+								<p class="W-jie1">就读于<strong>中南财经政法大学</strong></p>
 								<p class="W-jie2">
 									<span>&lt;大专&gt;</span>
 									<!-- 获得大学英语三级证书 获得计算机一级 -->
