--- a/index.html
+++ b/index.html
@@ -231,15 +231,16 @@
 								<p class="W-jie2">
 									<span>&lt;大专&gt;</span>
 									<!-- 获得大学英语三级证书 获得计算机一级 -->
+									计算机科学与技术专业
 								</p>
 							</li>
 							<li>
-								<p class="W-jie1">在<strong>广州华夏天网智能科技有限公司</strong>实习</strong></p>
+								<p class="W-jie1">在<strong>广州华夏天网智能科技有限公司实习</strong></p>
 								<p class="W-jie2">
 									<span>&lt;技术部/前端H5工程师&gt;</span>
 									负责PC端移动端页面制作。PSD切图后构建页面框架
 									利用HTML、JS、CSS3书写前端功能，让页面更充实丰富。
-									2017年07月初从该公司离职。
+									2018年07月初从该公司离职。
 								</p>
 							</li>
 
@@ -247,7 +248,7 @@
 								<p class="W-jie1">就职于<strong>上海索向有限公司</strong></p>
 								<p class="W-jie2">
 									<span>&lt;技术部/前端H5工程师&gt;</span>
-									本人在该公司主要负责基于微信平台的H5轻应用开发，
+									本人在该公司主要负责基于layUI，Vue开发，
 									配合后台人员实现产品前端界面效果与功能。
 								</p>
 							</li>
@@ -268,90 +269,25 @@
 								</a>
 							</div>
 							<div class="W-mywork-right">
-								<a href="https://showcc.github.io" target="_blank">
+								<a href="https://www.cnblogs.com/studysuper/" target="_blank">
 									<div class="W-work14"><span>我的博客</span></div>
 								</a>
 							</div>
 							<div class="clear"></div>
 						</div>
-						<!-- <div class="swiper-slide">
+						<div class="swiper-slide">
 							<div class="W-mywork-left">
-								<a href="http://www.wnclub.cn/" target="_blank">
-									<div class="W-work1"><span>唯恩优享荟官网</span></div>
+								<a href="http://www.dengdihao.club/haiguo/" target="_blank">
+									<div class="W-work1"><span>嗨果视频(仿腾讯视频)</span></div>
 								</a>
 							</div>
 							<div class="W-mywork-right">
-								<a href="http://www.szbofu.com/" target="_blank">
-									<div class="W-work2"><span>博福生物医药科技官网</span></div>
+								<a href="https://store.back.hbhrlb.com/store-back" target="_blank">
+									<div class="W-work2"><span>某后台管理系统</span></div>
 								</a>
 							</div>
 							<div class="clear"></div>
 						</div>
-						<div class="swiper-slide">
-							<div class="W-mywork-left">
-								<a href="https://showcc.github.io/gai1/GaiLeShi/index.html" target="_blank">
-									<div class="W-work3"><span>盖乐仕1(移动端)</span></div>
-								</a>
-							</div>
-							<div class="W-mywork-right">
-								<a href="https://showcc.github.io/gai1/GaiLeShi2/index.html" target="_blank">
-									<div class="W-work4"><span>盖乐仕2(移动端)</span></div>
-								</a>
-							</div>
-							<div class="clear"></div>
-						</div>
-						<div class="swiper-slide">
-							<div class="W-mywork-left">
-								<a href="https://showcc.github.io/gai1/XingBaKe/index.html" target="_blank">
-									<div class="W-work5"><span>微信点餐(移动端)</span></div>
-								</a>
-							</div>
-							<div class="W-mywork-right">
-								<a href="https://showcc.github.io/gai1/JiaTingHuanYuan/index.html" target="_blank">
-									<div class="W-work6"><span>家庭花园(移动端)</span></div>
-								</a>
-							</div>
-							<div class="clear"></div>
-						</div>
-						<div class="swiper-slide">
-							<div class="W-mywork-left">
-								<a href="https://showcc.github.io/gai1/JinQiangYu/index.html" target="_blank">
-									<div class="W-work7"><span>金枪鱼(移动端)</span></div>
-								</a>
-							</div>
-							<div class="W-mywork-right">
-								<a href="https://showcc.github.io/gai1/buji/index.html" target="_blank">
-									<div class="W-work8"><span>不急蛋糕</span></div>
-								</a>
-							</div>
-							<div class="clear"></div>
-						</div>
-						<div class="swiper-slide">
-							<div class="W-mywork-left">
-								<a href="https://showcc.github.io/gai1/jijian/index.html" target="_blank">
-									<div class="W-work9"><span>全能寄件</span></div>
-								</a>
-							</div>
-							<div class="W-mywork-right">
-								<a href="https://showcc.github.io/gai1/rouduoduo/index.html" target="_blank">
-									<div class="W-work10"><span>肉多多</span></div>
-								</a>
-							</div>
-							<div class="clear"></div>
-						</div>
-						<div class="swiper-slide">
-							<div class="W-mywork-left">
-								<a href="https://showcc.github.io/gai1/zhongzhi/index.html" target="_blank">
-									<div class="W-work11"><span>众智官网</span></div>
-								</a>
-							</div>
-							<div class="W-mywork-right">
-								<a href="https://showcc.github.io/gai1/yimuji/index.html" target="_blank">
-									<div class="W-work12"><span>易募集</span></div>
-								</a>
-							</div>
-							<div class="clear"></div>
-						</div> -->
 					</div>
 					<!-- 如果需要分页器 -->
 					<div class="swiper-pagination swiper-pagination2"></div>
@@ -472,7 +408,7 @@
 				<h3>关于我</h3>
 				<i></i>
 			</div>
-			<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术毕业，对前端很感兴趣，对它有一定的研究。
+			<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术专业，对前端很感兴趣，对它有一定的研究。
 				今后的职业规划是朝着技术专家(架构师)发展，目前深入研究vue、webpack。写过写过响应式页面，
 				移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。在此很感谢
 				<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>
@@ -558,43 +494,44 @@
 					<li>
 						<div class="Ws-time">
 							<img src="img/WS_jing.jpg" />
-							<span>2017年/02月初–2017年 /07月初</span>
+							<span>2017年/03月</span>
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
-							<strong>在苏州亿柏嘉软件技术有限公司实习</strong>
-							<em>技术部/前端工程师</em>
-							<p>
-								本人在该公司主要负责整个页面的前端开发，
-								配合后台人员实现产品前端界面效果与功能。
-							</p>
-						</div>
-					</li>
-					<li>
-						<div class="Ws-time">
-							<img src="img/WS_jing.jpg" />
-							<span>2017年/06月</span>
-						</div>
-						<div class="Ws-left-kong"></div>
-						<div class="Ws-gs">
-							<strong>毕业中南财经政法大学</strong>
+							<strong>就读于中南财经政法大学</strong>
 							<em>大专</em>
 							<p>
-								获得大学英语三级证书 获得计算机一级。
+								计算机科学与技术专业
 							</p>
 						</div>
 					</li>
 					<li>
 						<div class="Ws-time">
 							<img src="img/WS_jing.jpg" />
-							<span>2017年/08月初–至今</span>
+							<span>2017年/06月-2018年/06月</span>
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
-							<strong>就职于上海军果信息技术有限公司</strong>
+							<strong>广州华夏天网智能科技有限公司实习</strong>
 							<em>技术部/前端H5工程师</em>
 							<p>
-								本人在该公司主要负责基于微信平台的H5轻应用开发，
+								负责PC端移动端页面制作。PSD切图后构建页面框架
+								利用HTML、JS、CSS3书写前端功能，让页面更充实丰富。
+								2018年07月初从该公司离职。
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="Ws-time">
+							<img src="img/WS_jing.jpg" />
+							<span>2018年/07月初–至今</span>
+						</div>
+						<div class="Ws-left-kong"></div>
+						<div class="Ws-gs">
+							<strong>就职于上海索向有限公司</strong>
+							<em>技术部/前端H5工程师</em>
+							<p>
+								本人在该公司主要负责基于layUI，Vue开发，
 								配合后台人员实现产品前端界面效果与功能。
 							</p>
 						</div>
@@ -611,35 +548,17 @@
 			<div class="swiper-container swiper-container3">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide swiper-slide1">
-						<a href="http://www.show08.com" target="_blank">我的简历网站</a>
+						<a href="http://www.dengdihao.club" target="_blank">我的简历网站</a>
 					</div>
 					<div class="swiper-slide swiper-slide2">
-						<a href="https://showcc.github.io" target="_blank">我的博客</a>
+						<a href="https://www.cnblogs.com/studysuper/" target="_blank">我的博客</a>
 					</div>
-					<!-- <div class="swiper-slide swiper-slide3">
-						<a href="http://www.wnclub.cn/" target="_blank">唯恩优享荟官网</a>
+					<div class="swiper-slide swiper-slide3">
+						<a href="http://www.dengdihao.club/haiguo/" target="_blank">嗨果视频(仿腾讯视频)</a>
 					</div>
 					<div class="swiper-slide swiper-slide4">
-						<a href="http://www.szbofu.com/" target="_blank">博福生物医药科技官网</a>
+						<a href="https://store.back.hbhrlb.com/store-back" target="_blank">某后台管理系统</a>
 					</div>
-					<div class="swiper-slide swiper-slide5">
-						<a href="https://showcc.github.io/gai1/GaiLeShi/index.html" target="_blank">盖乐仕1(移动端)</a>
-					</div>
-					<div class="swiper-slide swiper-slide6">
-						<a href="https://showcc.github.io/gai1/GaiLeShi2/index.html" target="_blank">盖乐仕2(移动端)</a>
-					</div>
-					<div class="swiper-slide swiper-slide7">
-						<a href="https://showcc.github.io/gai1/XingBaKe/index.html" target="_blank">微信点餐(移动端)</a>
-					</div>
-					<div class="swiper-slide swiper-slide8">
-						<a href="https://showcc.github.io/gai1/JiaTingHuanYuan/index.html" target="_blank">家庭花园(移动端)</a>
-					</div>
-					<div class="swiper-slide swiper-slide9">
-						<a href="https://showcc.github.io/gai1/JinQiangYu/index.html" target="_blank">金枪鱼(移动端)</a>
-					</div>
-					<div class="swiper-slide swiper-slide10">
-						<a href="https://showcc.github.io/gai1/buji/index.html" target="_blank">不急蛋糕</a>
-					</div> -->
 				</div>
 				<!-- 如果需要分页器 -->
 				<div class="swiper-pagination swiper-pagination3"></div>
