--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 					<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术毕业，对前端很感兴趣，对它有一定的研究。
 						今后的职业规划是朝着技术专家(架构师)发展，目前深入研究vue、webpack。写过写过响应式页面，
 						移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。在此很感谢
-						<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>
+						<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>、
+						<a href="http://www.shujuling.com/" title="" target="_blank" class="yibaijia">上海睿翎法律咨询服务有限公司</a>
 						对我的培养，让我学到了很多东西。
 					</p>
 					<p>
@@ -192,8 +193,8 @@
 							<h5>我的经历</h5>
 							<div class="W-jing-nr-parent">
 								<div class="W-time">
-									<span>2017</span>
-									<i>year</i>
+									<span></span>
+									<i></i>
 									<div class="W-zhuan"></div>
 								</div>
 							</div>
@@ -202,22 +203,29 @@
 
 						<ul class="W-tim-ul">
 							<li class="W-li-top W-li-top-diyi">
-								<em>2017</em>
-								<i>03月</i>
+								<em>2016</em>
+								<i>09月</i>
 								<b></b>
 								<div class="clear"></div>
 								<span></span>
 							</li>
 							<li class="W-li-top W-margin-top1">
 								<em>2017</em>
-								<i>06月</i>
+								<i>03月</i>
 								<b></b>
 								<div class="clear"></div>
 								<span></span>
 							</li>
 							<li class="W-li-top W-margin-top2">
 								<em>2018</em>
-								<i>07月</i>
+								<i>03月</i>
+								<b></b>
+								<div class="clear"></div>
+								<span></span>
+							</li>
+							<li class="W-li-top W-margin-top2">
+								<em>2018</em>
+								<i>09月</i>
 								<b></b>
 								<div class="clear"></div>
 								<span></span>
@@ -249,6 +257,14 @@
 								<p class="W-jie2">
 									<span>&lt;技术部/前端H5工程师&gt;</span>
 									本人在该公司主要负责基于layUI，Vue开发，
+									配合后台人员实现产品前端界面效果与功能。
+								</p>
+							</li>
+							<li class="W-time-top">
+								<p class="W-jie1">就职于<strong>上海睿翎法律咨询服务有限公司</strong></p>
+								<p class="W-jie2">
+									<span>&lt;技术部/前端H5工程师&gt;</span>
+									本人在该公司主要负责基于Vue、JQuery开发，
 									配合后台人员实现产品前端界面效果与功能。
 								</p>
 							</li>
@@ -411,7 +427,8 @@
 			<p>您好，我叫邓迪豪，22岁，坐标武汉。计算机科学与技术专业，对前端很感兴趣，对它有一定的研究。
 				今后的职业规划是朝着技术专家(架构师)发展，目前深入研究vue、webpack。写过写过响应式页面，
 				移动端页面，pc端页面。小的来说，商城，企业网站，视频，音频，评论，地图等都有涉及。在此很感谢
-				<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>
+				<a href="http://www.soline.com.cn/" title="" target="_blank" class="yibaijia">上海索向有限公司</a>、
+				<a href="http://www.shujuling.com/" title="" target="_blank" class="yibaijia">上海睿翎法律咨询服务有限公司</a>
 				对我的培养，让我学到了很多东西。
 			</p>
 			<p>
@@ -494,7 +511,7 @@
 					<li>
 						<div class="Ws-time">
 							<img src="img/WS_jing.jpg" />
-							<span>2017年/03月</span>
+							<span>2016年/09月</span>
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
@@ -508,7 +525,7 @@
 					<li>
 						<div class="Ws-time">
 							<img src="img/WS_jing.jpg" />
-							<span>2017年/06月-2018年/06月</span>
+							<span>2017年/03月-2018年/03月</span>
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
@@ -524,7 +541,22 @@
 					<li>
 						<div class="Ws-time">
 							<img src="img/WS_jing.jpg" />
-							<span>2018年/07月初–至今</span>
+							<span>2018年/03月–2018年/09月</span>
+						</div>
+						<div class="Ws-left-kong"></div>
+						<div class="Ws-gs">
+							<strong>就职于上海索向有限公司</strong>
+							<em>技术部/前端H5工程师</em>
+							<p>
+								本人在该公司主要负责基于layUI，Vue开发，
+								配合后台人员实现产品前端界面效果与功能。
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="Ws-time">
+							<img src="img/WS_jing.jpg" />
+							<span>2018年/09月初–至今</span>
 						</div>
 						<div class="Ws-left-kong"></div>
 						<div class="Ws-gs">
